@@ -8,6 +8,8 @@ debhelper (13.5.3) UNRELEASED; urgency=medium
     outputs information about which compat level is declared
     and active.  It also tells how the compat level was
     declared.
+  * Dh_Lib.pm: Add new function, get_non_binnmu_date_epoch,
+    only needed for dh_strip_nondeterminism.
 
   [ Guillem Jover ]
   * dh: Add missing _ in execute_after example in POD.
